fix Wrap
Fixed issue with maxSubHeader not properly wrapping

--- a/css/app.css
+++ b/css/app.css
@@ -116,12 +116,14 @@ nav h1 a {
 .maxSubHeader {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   align-content: center;
   align-items: center;
   justify-content: space-evenly;
+  margin: 10px 0 0 10px;
   padding: 0;
   max-width: 1000px;
-  width: 100vw;
+  width: 100%;
 }
 
 /* 
